# immpp

./: .clang-format  .clang-tidy  .clangd  .gitignore  .gitmodules  CMakeLists.txt
assets/fonts/: Pixeloid.txt
samples/: anchor.cpp  animation.cpp
src/: main.cpp  types.hpp  window.cpp  window.hpp
src/backend/sdl3/: initializer.cpp  window.cpp
src/immpp/: dev_logger.cpp  initializer.hpp  logger.hpp  math.cpp  math.hpp  size.cpp  size.hpp  types.hpp  window.hpp
